--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -237,7 +237,7 @@
               <li><input id="nflix_radio" class="nfw_checkbox" type="radio" name='default'> Nflix.pl</li>
             </ul>
 	    <p>Color circles with the ratings: <input id="colors_checkbox" class="nfw_checkbox" type="checkbox">
-            <p><button id='save_default'>Save</button> <span id='conf_reload'>Reload Netflix.com after modfifications</span>
+            <p><button id='save_default'>Save</button> <span id='conf_reload'>Reload Netflix.com after modification</span>
         </div>
         <div class='desc'>
             <h3>about</h3><a name='about'></a>
@@ -300,7 +300,7 @@
             <h4> 0.5.2 - 0.5.1</h4>
             <p> Another new links to imdb, metacritic and  filmweb</p>
             <h4> 0.5.0</h4>
-            <p> Source code refactoring. Several bugfixes.</p>
+            <p> Source code refactoring. Several bug fixes.</p>
             <h4> 0.4.11</h4>
             <p> Another changes on Filmweb site.</p>
             <h4> 0.4.10</h4>
