Fix for new Netflix layout

--- a/netfweb/popup.html
+++ b/netfweb/popup.html
@@ -54,7 +54,7 @@
         <div id="tmdb"><input id="tmdb_check" class="nfw_checkbox" type="checkbox" checked="checked"> TheMovieDB</div>
         <div id="nflix"><input id="nflix_check" class="nfw_checkbox" type="checkbox" checked="checked"> Nflix.pl</div>
         <div id="reload" class='nfw_btns'><img id="reload" title='Reload scores' src='reload.png'></div>
-        <div id="top" class='nfw_btns'>top</div>
+        <!-- div id="top" class='nfw_btns'>top</div -->
         <div id="help" class='nfw_btns'>help / config</div>
         <div id="data" class='nfw_btns'><div>
     </body>
