--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -221,8 +221,8 @@
             <h3>configure</h3><a name='about'></a>
             <p>Select services from which the ratings will be displayed::</p>
             <ul>
-              <li><input id="filmweb_check" class="nfw_checkbox" type="checkbox" checked="checked"> Filmweb.pl </li>
-              <li><input id="metacritic_check" class="nfw_checkbox" type="checkbox" checked="checked"> Metacritic </li>
+              <li><input id="filmweb_check" class="nfw_checkbox" type="checkbox"> Filmweb.pl </li>
+              <li><input id="metacritic_check" class="nfw_checkbox" type="checkbox"> Metacritic </li>
               <li><input id="imdb_check" class="nfw_checkbox" type="checkbox" checked="checked"> IMDb</li>
               <li><input id="tmdb_check" class="nfw_checkbox" type="checkbox" checked="checked"> TheMovieDB</li>
               <li><input id="nflix_check" class="nfw_checkbox" type="checkbox"> Nflix.pl</li>
@@ -260,6 +260,8 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.9.2</h4>
+            <p>First release after over a year. Fixes for the new Netflix layout. Remaining problems: Filmweb and Metacritic not working :( </p>
             <h4> 0.9.0</h4>
             <p> You can enable coloring of the rating circles on the home main: green for a rating above 7.5, yellow for a rating above 5, red for a rating below 5.</p>
             <h4> 0.8.1</h4>
@@ -408,123 +410,6 @@
             <p>
             Obejrzyj <a href='https://www.youtube.com/watch?v=73eLVFmL0lo&hl=pl&cc_lang_pref=pl&cc_load_policy=1'>film</a>, w którym wyjaśniamy jak możesz pomóc w dostarczaniu bardziej trafnych ocen.
             </p>
-        </div>
-
-
-        <div class='desc'>
-            <h3>zmiany</h3><a name='changelog_pl'></a>
-            <h4> 0.9.0</h4>
-            <p> Można włączyć kolorowanie kółek z ocenami na stronie głównej: zielony - ocena powyżej 7.5, żółty - powyżej 5, czerwony - poniżej 5.</p>
-            <h4> 0.8.1</h4>
-            <p> Zmiana opisu, koniczna aby przywrócić wtyczkę do sklepu. Nowe powiązania z serwisami. </p>
-            <h4> 0.8.0</h4>
-            <p> Okno konfiguracyjne po pierwszej instalacji. Poprawione wyświetlanie liczb. Poprawka dla IMDb. </p>
-            <h4> 0.7.4</h4>
-            <p> Poprawiony błąd z ocenami Metacritic.</p>
-            <h4> 0.7.3</h4>
-            <p> Nowe powiązania z serwisami imdb, themoviedb, metacritic i filmweb.</p>
-            <h4> 0.7.2</h4>
-            <p> Poprawiony błąd z ocenami IMDb.</p>
-            <h4> 0.7.1</h4>
-            <p> Wróciły oceny z serwisu Nflix.pl</p>
-            <h4> 0.7.0</h4>
-            <p> Wprowadzanie jednej z najbardziej pożądanych funkcji. Możesz teraz zmienić niepożądane oceny:<br>
-            <img src="netflix.gif"></p>
-            <h4> 0.6.10</h4>
-            <p> Poprawiony błąd z nowymi tytułami.</p>
-            <h4> 0.6.9</h4>
-            <p> Poprawiony błąd wyszukiwania tytułu na stronie głównej.</p>
-            <h4> 0.6.8</h4>
-            <p> Usunięcie konfliktu z pointer events. Nowe powiązania z serwisami imdb, themoviedb, metacritic i filmweb.</p>
-            <h4> 0.6.7</h4>
-            <p> Poprawki dla ocen z IMDb i Metacritic. Nowe powiązania z serwisami imdb, themoviedb, metacritic i filmweb.</p>
-            <h4> 0.6.6</h4>
-            <p> Wyświetlanie oceny zgodnie z formatem przeglądarki. </p>
-            <h4> 0.6.5</h4>
-            <p> Poprawione wyświetlanie ocen dla tytułów Netflix Originals. Nowe powiązania z imdb, themoviedb, metacritic i filmweb.</p>
-            <h4> 0.6.4 - 0.6.3</h4>
-            <p> Nowe powiązania z serwisami imdb, themoviedb, metacritic i filmweb.</p>
-            <h4> 0.6.2</h4>
-            <p> Poprawka błędu wyświetlania oceny na stronie głównej z uwagi na zmiany na stronach netfliksa.</p>
-            <h4> 0.6.1</h4>
-            <p> Poprawione dopasowanie tytułów ze stronami Filmweb i IMDb. Nowe powiązania z serwisami imdb, themoviedb, metacritic i filmweb.</p>
-            <h4> 0.6.0</h4>
-            <p> (Beta) Oceny z serisu TheMovieDB.org</p>
-            <h4> 0.5.2 - 0.5.1</h4>
-            <p> Kolejne powiązania z serwisami imdb, metacritic i filmweb</p>
-            <h4> 0.5.0</h4>
-            <p> Refaktoryzacja kodu źródłowego. Usunięte drobne błędy.</p>
-            <h4> 0.4.11</h4>
-            <p> Kolejne zmianamy na stronach Filmweb.
-            <h4> 0.4.10</h4>
-            <p> Poprawka związana ze zmianami na stronach Filmweb. Lepsze wyszukiwanie tytułów na IMDb.</p>
-            <h4> 0.4.9</h4>
-            <p> Kolejne powiązania z serwisami imdb, metacritic and  filmweb</p>
-            <h4> 0.4.8</h4>
-            <p> Zgłaszanie linków do stron tytułów bez ocen (np. nowe pozycje). Przycisk 'Related titles'.</p>
-            <h4> 0.4.7 - 0.4.3</h4>
-            <p> Kolejne powiązania z serwisami imdb, metacritic and  filmweb</p>
-              <h4> 0.4.2</h4>
-            <p> Aktualizowanie ocen podczas wyświetlania szczegółowych informacji o tytule</p>
-           <h4> 0.4.1</h4>
-            <p> Nowe powiązania z serwisami imdb, metacritic and  filmweb</p>
-
-             <h4> 0.4.0</h4>
-            <p> Oceny z IMDb są w końcu dostępne!</p>
-
-
-             <h4> 0.3.1</h4>
-            <p> (1) Można już włączyć oceny z serwisu Metacritic na głównej stronie serwisu Netflix. (2) Wyświetlanie wszystkich filmów wg zindeksowanych ocen z serwisów (opcja TOP w menu rozszerzenie - prowy górny róg przeglądarki).</p>
-
-
-            <h4> 0.3.0</h4>
-            <p> Od teraz możesz poprawiać błędne oceny i linki (Filmweb i Metacritic), a także dzielić się tymi informacjami z innymi użytkownikami (<a style='color:black' href='https://www.youtube.com/watch?v=73eLVFmL0lo&hl=pl&cc_lang_pref=pl&cc_load_policy=1'>więcej info</a>).</p>
-
-            <h4> 0.2.8</h4>
-            <p> Tylko nowe mapowania do pozycji w serwisach Filmweb i Metacritic</p>
-
-            <h4> 0.2.7</h4>
-            <p> Poprawka błędu wyświetlania oceny na stronie głównej z uwagi na zmiany na stronach netfliksa.</p>
-
-
-            <h4> 0.2.6</h4>
-            <p> Wersja beta wsparcia dla ocen z serwisu  <span style='color:red'>metacritic.com</span>! Obecnie oceny są wyświetlane tylko w oknie szczegółów. Niska skuteczność dopasowania ocen w przypadku ustawionej wersji netfliksa na język inny niż angielski. </p>
-
-            <h4> 0.2.5</h4>
-            <p> Tylko kilka nowych linków do stron filmwebu</p>
-
-            <h4> 0.2.4</h4>
-            <p> Poprawione wyświetlanie ocen na stronach www.netflix.com/title... Link do wyszkiwarki Filmweb w przypadku nierozpoznanych tytułów</p>
-
-            <h4> 0.2.3</h4>
-            <p> Popup menu na stronie Filmweb pozwala na powiązanie jej z pozycją z katalogu Netflix. Kilka poprawek błędów. </p>
-
-            <h4> 0.2.2</h4>
-            <p> Szybka poprawka problemów z raportowaniem.</p>
-
-    <h4> 0.2.1</h4>
-            <p> Poprawione mapowanie pozycji Netflix do stron Filmweb dla kilkunastu pozycji. Poprawione drobne błędy z wyświetlaniem. </p>
-
-            <h4> 0.2.0</h4>
-            <p> Wyświetlanie ocen na stronach www.netflix.com/title... </p>
-
-             <h4> 0.1.8</h4>
-            <p>Strona pomocy.</p>
-
-            <h4> 0.1.7</h4>
-            <p>Możliwość zgłaszania problemów z ocenami i linkami z serwisu Filmweb. </p>
-
-            <h4> 0.1.6</h4>
-            <p>Aktualizajca z uwagi na zmiany na stronach Netfliksa </p>
-
-            <h4> 0.1.5</h4>
-            <p>Port dla Opery i Firefoksa.</p>
-
-            <h4>0.1.4</h4>
-            <p>Linki to serwisu nflix.pl. Naprawiony problem z wyświetlaniem rantingów.</p>
-
-            <h4> 0.1.2</h4>
-            <p>Wyświetlanie szczegółowych informacji w okach szczegółów. Linki do serwisu Filmweb.pl.</p>
         </div>
 
         <div style='clear:both'></div>
