Update version, info and new mappings

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -260,6 +260,8 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.9.3</h4>
+            <p>Metacritic ratings fixed (thx @elchenberg), new mappings.</p>
             <h4> 0.9.2</h4>
             <p>First release after over a year. Fixes for the new Netflix layout. Remaining problems: Filmweb and Metacritic not working :( </p>
             <h4> 0.9.0</h4>
