--- a/netfweb/top.html
+++ b/netfweb/top.html
@@ -147,6 +147,7 @@
                 <div><a id='metacritic' href='#'>metacritic</a></div>
                 <div><a id='filmweb' href='#'>filmweb</a></div>
                 <div><a id='imdb' href='#'>IMDb</a></div>
+                <div><a id='rotten_tomatoes' href='#'>Rotten Tomatoes</a></div>
             </div>
          </div>
         <div class="logo_grad"></div>
