--- a/netfweb/top.html
+++ b/netfweb/top.html
@@ -148,6 +148,7 @@
                 <div><a id='filmweb' href='#'>filmweb</a></div>
                 <div><a id='imdb' href='#'>IMDb</a></div>
                 <div><a id='rotten_tomatoes' href='#'>Rotten Tomatoes</a></div>
+                <div><a id='film_affinity' href='#'>FilmAffinity</a></div>
             </div>
          </div>
         <div class="logo_grad"></div>
