--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -227,6 +227,7 @@
               <li><input id="tmdb_check" class="nfw_checkbox" type="checkbox" checked="checked"> TheMovieDB</li>
               <li><input id="nflix_check" class="nfw_checkbox" type="checkbox"> Nflix.pl</li>
               <li><input id="rotten_tomatoes_check" class="nfw_checkbox" type="checkbox">Rotten Tomatoes</li>
+              <li><input id="film_affinity_check" class="nfw_checkbox" type="checkbox"> FilmAffinity </li>
             </ul>
 
             <p>Select the default service from which ratings will be displayed on main page:</p>
@@ -237,6 +238,7 @@
               <li><input id="tmdb_radio" class="nfw_checkbox" type="radio" checked name='default'> TheMovieDB</li>
               <li><input id="nflix_radio" class="nfw_checkbox" type="radio" name='default'> Nflix.pl</li>
               <li><input id="rotten_tomatoes_radio" class="nfw_checkbox" type="radio" name='default'>Rotten Tomatoes</li>
+              <li><input id="film_affinity_radio" class="nfw_checkbox" type="radio" name='default'> FilmAffinity </li>
             </ul>
 	    <p>Color circles with the ratings: <input id="colors_checkbox" class="nfw_checkbox" type="checkbox">
             <p><button id='save_default'>Save</button> <span id='conf_reload'>Reload Netflix.com after modfifications</span>
@@ -244,7 +246,7 @@
         <div class='desc'>
             <h3>about</h3><a name='about'></a>
             <p>Since Netflix replaced stars with a thumbs rating system, it has become <a href='https://www.forbes.com/sites/insertcoin/2017/06/26/netflixs-thumb-based-ratings-system-is-the-epitome-of-uselessness'>very painful</a> to find interesting stuff.
-              This Open Source extension enriches netflix browser with a rating based on the scores from IMDb.com, FilmWeb.pl, Metacritic.com, Nflix.pl, TheMovieDB.org, and RottenTomatoes.com sites.
+              This Open Source extension enriches netflix browser with a rating based on the scores from IMDb.com, FilmWeb.pl, Metacritic.com, Nflix.pl, TheMovieDB.org, RottenTomatoes.com, and FilmAffinity.com sites.
               Source code and issue tracking system available on <a href='https://github.com/mrwrob/netfweb'>GitHub</a>.
             </p>
             <p><div class='nfw_score'>8,8</div><div class='nfw_score_jaw'><img src='star.png'> Filmweb 8,8 <img src='star.png'> Nflix 8,21 <img src='star.png'> Metacritic 71 <img src='star.png'> IMDb 7,31 <img src='star.png'> </div></p>
