Add the Trak TV scores and links

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -142,7 +142,7 @@
             div.nfw_score_jaw {
                 font-size: 14px;
                 padding: 2px 5px;
-                width: 480px;
+                width: 520px;
                 float: left;
 
                 margin: 7px 0 0 10px;
@@ -227,6 +227,7 @@
               <li><input id="film_affinity_check" class="nfw_checkbox" type="checkbox" checked="checked"> FilmAffinity </li>
               <li><input id="metacritic_check" class="nfw_checkbox" type="checkbox" checked="checked"> Metacritic </li>        
               <li><input id="filmweb_check" class="nfw_checkbox" type="checkbox"> Filmweb.pl </li>
+	      <li><input id="trak_tv_check" class="nfw_checkbox" type="checkbox" checked="checked"> Trakt TV </li>			  
              </ul>
 
             <p>Select the default service from which ratings will be displayed on main page:</p>
@@ -237,7 +238,7 @@
               <li><input id="film_affinity_radio" class="nfw_checkbox" type="radio" name='default'> FilmAffinity </li>
               <li><input id="metacritic_radio" class="nfw_checkbox" type="radio" name='default'> Metacritic </li>
               <li><input id="filmweb_radio" class="nfw_checkbox" type="radio" name='default'> Filmweb.pl </li>
-
+	      <li><input id="track_tv_radio" class="nfw_checkbox" type="radio" name='default'> Trakt TV </li>
             </ul>
       	    <p>Color circles with the ratings: <input id="colors_checkbox" class="nfw_checkbox" type="checkbox" checked="checked">
             <p><button id='save_default'>Save</button> <span id='conf_reload'>Reload Netflix.com after modfifications</span>
@@ -245,10 +246,10 @@
         <div class='desc'>
             <h3>about</h3><a name='about'></a>
             <p>Since Netflix replaced stars with a thumbs rating system, it has become <a href='https://www.forbes.com/sites/insertcoin/2017/06/26/netflixs-thumb-based-ratings-system-is-the-epitome-of-uselessness'>very painful</a> to find interesting stuff.
-              This Open Source extension enriches netflix browser with a rating based on the scores from IMDb.com, FilmWeb.pl, Metacritic.com, Nflix.pl, TheMovieDB.org, RottenTomatoes.com, and FilmAffinity.com sites.
+              This Open Source extension enriches netflix browser with a rating based on the scores from IMDb.com, FilmWeb.pl, Metacritic.com, Nflix.pl, TheMovieDB.org, RottenTomatoes.com, FilmAffinity.com and Trakt.TV sites.
               Source code and issue tracking system available on <a href='https://github.com/mrwrob/netfweb'>GitHub</a>.
             </p>
-            <p><div class='nfw_score'>8,8</div><div class='nfw_score_jaw'><img src='star.png'> Filmweb 8,8 <img src='star.png'> Nflix 8,21 <img src='star.png'> Metacritic 71 <img src='star.png'> IMDb 7,31 <img src='star.png'> </div></p>
+            <p><div class='nfw_score'>8,8</div><div class='nfw_score_jaw'><img src='star.png'> Filmweb 8,8 <img src='star.png'> Nflix 8,21 <img src='star.png'> Metacritic 71 <img src='star.png'> IMDb 7,31 <img src='star.png'> Trakt Tv 83 <img src='star.png'> </div></p>
         </div>
 
         <div class='desc'>
