--- a/netfweb/top.html
+++ b/netfweb/top.html
@@ -149,6 +149,7 @@
                 <div><a id='imdb' href='#'>IMDb</a></div>
                 <div><a id='rotten_tomatoes' href='#'>Rotten Tomatoes</a></div>
                 <div><a id='film_affinity' href='#'>FilmAffinity</a></div>
+				<div><a id='trakt_tv' href='#'>Trakt TV</a></div>
             </div>
          </div>
         <div class="logo_grad"></div>
