--- a/netfweb/popup.html
+++ b/netfweb/popup.html
@@ -54,6 +54,7 @@
         <div id="film_affinity"><input id="film_affinity_check" class="nfw_checkbox" type="checkbox" checked="checked"> FilmAffinity </div>
         <div id="metacritic"><input id="metacritic_check" class="nfw_checkbox" type="checkbox" checked="checked"> Metacritic </div>
         <div id="filmweb"><input id="filmweb_check" class="nfw_checkbox" type="checkbox" checked="checked"> Filmweb.pl </div>
+		<div id="trakt_tv"><input id="trakt_tv_check" class="nfw_checkbox" type="checkbox" checked="checked"> Trakt TV </div>
 
         <div id="reload" class='nfw_btns'><img id="reload" title='Reload scores' src='reload.png'></div>
         <!-- div id="top" class='nfw_btns'>top</div -->
