25: Bring back Filmweb ratings

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -226,7 +226,7 @@
               <li><input id="rotten_tomatoes_check" class="nfw_checkbox" type="checkbox" checked="checked"> Rotten Tomatoes</li>
               <li><input id="film_affinity_check" class="nfw_checkbox" type="checkbox" checked="checked"> FilmAffinity </li>
               <li><input id="metacritic_check" class="nfw_checkbox" type="checkbox" checked="checked"> Metacritic </li>        
-              <li><input id="filmweb_check" class="nfw_checkbox" type="checkbox"> Filmweb.pl </li>
+              <li><input id="filmweb_check" class="nfw_checkbox" type="checkbox" checked="checked"> Filmweb.pl </li>
               <li><input id="trak_tv_check" class="nfw_checkbox" type="checkbox" checked="checked"> Trakt TV </li>			  
              </ul>
 
