--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -226,7 +226,7 @@
               <li><input id="rotten_tomatoes_check" class="nfw_checkbox" type="checkbox" checked="checked"> Rotten Tomatoes</li>
               <li><input id="film_affinity_check" class="nfw_checkbox" type="checkbox" checked="checked"> FilmAffinity </li>
               <li><input id="metacritic_check" class="nfw_checkbox" type="checkbox" checked="checked"> Metacritic </li>        
-              <li><input id="filmweb_check" class="nfw_checkbox" type="checkbox" checked="checked"> Filmweb.pl </li>
+              <li><input id="filmweb_check" class="nfw_checkbox" type="checkbox"> Filmweb.pl </li>
               <li><input id="trak_tv_check" class="nfw_checkbox" type="checkbox" checked="checked"> Trakt TV </li>			  
              </ul>
 
@@ -269,6 +269,8 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 1.1.0</h4>
+            <p>TraktTv ratings added thanks to @Jose-Nogueira! Fixed problem with FilmWeb ratings.</p>
             <h4> 1.0.1</h4>
             <p>Once more, thanks to @elchenberg, we've got FilmAffinity rating available!</p>
             <h4> 1.0.0</h4>
