--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -269,6 +269,8 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 1.1.0</h4>
+            <p>TraktTv ratings added thanks to @Jose-Nogueira! Fixed problem with FilmWeb ratings.</p>
             <h4> 1.0.1</h4>
             <p>Once more, thanks to @elchenberg, we've got FilmAffinity rating available!</p>
             <h4> 1.0.0</h4>
