--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -238,9 +238,17 @@
               <li><input id="film_affinity_radio" class="nfw_checkbox" type="radio" name='default'> FilmAffinity </li>
               <li><input id="metacritic_radio" class="nfw_checkbox" type="radio" name='default'> Metacritic </li>
               <li><input id="filmweb_radio" class="nfw_checkbox" type="radio" name='default'> Filmweb.pl </li>
-	      <li><input id="track_tv_radio" class="nfw_checkbox" type="radio" name='default'> Trakt TV </li>
+	      <li><input id="trakt_tv_radio" class="nfw_checkbox" type="radio" name='default'> Trakt TV </li>
             </ul>
-      	    <p>Color circles with the ratings: <input id="colors_checkbox" class="nfw_checkbox" type="checkbox" checked="checked">
+              <p>Color circles with the ratings: <input id="colors_checkbox" class="nfw_checkbox" type="checkbox" checked="checked">
+                <p>
+                <button id='Trakt_TV_connect' style="width: 180px;">Get the token</button>
+                <br>
+                <input id="track_tv_code" type="text" name='default' style="width: 180px;box-sizing: border-box;">
+                <br>
+                <button id='Trakt_TV_connect' style="width: 180px;">Connect with Trakt TV</button>
+                    
+
             <p><button id='save_default'>Save</button> <span id='conf_reload'>Reload Netflix.com after modfifications</span>
         </div>
         <div class='desc'>
