--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -227,7 +227,7 @@
               <li><input id="film_affinity_check" class="nfw_checkbox" type="checkbox" checked="checked"> FilmAffinity </li>
               <li><input id="metacritic_check" class="nfw_checkbox" type="checkbox" checked="checked"> Metacritic </li>        
               <li><input id="filmweb_check" class="nfw_checkbox" type="checkbox"> Filmweb.pl </li>
-              <li><input id="trak_tv_check" class="nfw_checkbox" type="checkbox" checked="checked"> Trakt TV </li>			  
+              <li><input id="trakt_tv_check" class="nfw_checkbox" type="checkbox" checked="checked"> Trakt TV </li>			  
              </ul>
 
             <p>Select the default service from which ratings will be displayed on main page:</p>
@@ -238,13 +238,13 @@
               <li><input id="film_affinity_radio" class="nfw_checkbox" type="radio" name='default'> FilmAffinity </li>
               <li><input id="metacritic_radio" class="nfw_checkbox" type="radio" name='default'> Metacritic </li>
               <li><input id="filmweb_radio" class="nfw_checkbox" type="radio" name='default'> Filmweb.pl </li>
-			  <li><input id="track_tv_radio" class="nfw_checkbox" type="radio" name='default'> Trakt TV </li>
+			  <li><input id="trakt_tv_radio" class="nfw_checkbox" type="radio" name='default'> Trakt TV </li>
             </ul>
               <p>Color circles with the ratings: <input id="colors_checkbox" class="nfw_checkbox" type="checkbox" checked="checked">
                 <p>
-                <button id='Trakt_TV_connect' style="width: 180px;">Get the token</button>
+                <button id='Trakt_TV_get' style="width: 180px;">Get the token</button>
                 <br>
-                <input id="track_tv_code" type="text" name='default' style="width: 180px;box-sizing: border-box;">
+                <input id="trakt_tv_code" type="text" name='default' style="width: 180px;box-sizing: border-box;">
                 <br>
                 <button id='Trakt_TV_connect' style="width: 180px;">Connect with Trakt TV</button>
                     
