--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -202,7 +202,7 @@
                 background-color: rgb(197, 178, 143);
                 border-radius: 5px;
                 width: 200px;
-            }}
+            }
         </style>
         <script type="text/javascript" src="jquery.js"></script>
     </head>
@@ -286,6 +286,8 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 1.2.0</h4>
+            <p>TraktTv API integration: change the opacity of the already movies seen, mark automaticaly on the Trakt TV when you start to seen a movie and mark automaticaly as seen when you finsh. Kudos to @Jose-Nogueira</p>
             <h4> 1.1.0</h4>
             <p>TraktTv ratings added thanks to @Jose-Nogueira! Fixed problem with FilmWeb ratings.</p>
             <h4> 1.0.1</h4>
