--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -258,7 +258,7 @@
                 <button id='Trakt_TV_connect' style="width: 180px;">Connect with Trakt TV</button>
             </div>
 
-            <p><button id='save_default'>Save</button> <span id='conf_reload'>Reload Netflix.com after modfifications</span>
+            <p><button id='save_default'>Save</button> <span id='conf_reload'>Reload Netflix.com after modification</span>
         </div>
         <div class='desc'>
             <h3>about</h3><a name='about'></a>
@@ -338,7 +338,7 @@
             <h4> 0.5.2 - 0.5.1</h4>
             <p> Another new links to imdb, metacritic and  filmweb</p>
             <h4> 0.5.0</h4>
-            <p> Source code refactoring. Several bugfixes.</p>
+            <p> Source code refactoring. Several bug fixes.</p>
             <h4> 0.4.11</h4>
             <p> Another changes on Filmweb site.</p>
             <h4> 0.4.10</h4>
