--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -287,7 +287,7 @@
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
             <h4> 1.2.0</h4>
-            <p>TraktTv API integration: change the opacity of the already movies seen, mark automaticaly on the Trakt TV when you start to seen a movie and mark automaticaly as seen when you finsh. Kudos to @Jose-Nogueira</p>
+            <p>TraktTv API integration: change the opacity of movies already seen, mark automatically on Trakt TV when you start to watch a movie and mark automatically as seen when you finish. Kudos to @Jose-Nogueira</p>
             <h4> 1.1.0</h4>
             <p>TraktTv ratings added thanks to @Jose-Nogueira! Fixed problem with FilmWeb ratings.</p>
             <h4> 1.0.1</h4>
@@ -301,7 +301,7 @@
             <h4> 0.9.0</h4>
             <p> You can enable coloring of the rating circles on the home main: green for a rating above 7.5, yellow for a rating above 5, red for a rating below 5.</p>
             <h4> 0.8.1</h4>
-            <p> Changed extension description, due to Web Store policy. Nie links to imdb, themoviedb, metacritic and filmweb. </p>
+            <p> Changed extension description, due to Web Store policy. New links to imdb, themoviedb, metacritic and filmweb. </p>
             <h4> 0.8.0</h4>
             <p> Configuration window after first installation. Fixed locale. Fixes for IMDb. </p>
             <h4> 0.7.4</h4>
@@ -313,7 +313,7 @@
             <h4> 0.7.1</h4>
             <p> Ratings from Nflix.pl are back.</p>
             <h4> 0.7.0</h4>
-            <p> Bringing one of the most demanded feature. You can now turn of undesirable ratings:<br>
+            <p> Bringing one of the most demanded feature. You can now turn off undesirable ratings:<br>
             <img src="netflix.gif"></p>
             <h4> 0.6.10</h4>
             <p> Fixed problem with new titles.</p>
